--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "maddhatter/laravel-fullcalendar": "^1.3",
         "symfony/dom-crawler": "^5.1",
         "tymon/jwt-auth": "^1.0"
     },
